latest commit with video streaming